--- a/src/index.html
+++ b/src/index.html
@@ -4,12 +4,13 @@
 <head>
 	<title>Parcel Sandbox</title>
 	<meta charset="UTF-8" />
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
 	<div id="app"></div>
-
-	<script src="src/index.js">
+<h1>data</h1>
+	<script src="index.mjs">
 	</script>
 </body>
 
